src/tests/snapshots/gitu__tests__discard__branch_selected_confirm.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
▌  merged                                                                       |
   unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really discard? (y or n) › █                                                  |
styles_hash: 7ee167ab1e7e41ed
