src/tests/snapshots/gitu__tests__discard__discard_branch_no.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  asd                                                                          |
 * main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 2dcdd2c93f7b7c45
