src/tests/snapshots/gitu__tests__discard__discard_staged_file.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
▌4f3ed19 main add file-one                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout HEAD -- file-one                                                 |
styles_hash: 19cf9a9796ec3951
