src/tests/snapshots/gitu__tests__discard__discard_staged_file_when_unstaged_changes.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   initial-file                                                        |
 @@ -1 +1 @@                                                                    |
 -hello                                                                         |
 +modified                                                                      |
                                                                                |
 Recent commits                                                                 |
▌85f3b96 main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git restore --staged initial-file                                             |
styles_hash: 22fa4ad45b1c9037
