src/tests/snapshots/gitu__tests__discard__discard_unstaged_delta.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
▌4f3ed19 main add file-one                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: 9dbe5daa14c6b938
