src/tests/snapshots/gitu__tests__discard__unmerged_branch_selected_unmerged_confirm.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
   merged                                                                       |
▌  unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Branch is not fully merged. Really delete? (y or n) › █                       |
styles_hash: f35de1469c9b1486
